# BM-USA-PROXY

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  admin.html  docker-compose.override.yml  docker-compose.yml  index.html  miniapp.html  railway.json
backend/: .dockerignore  Dockerfile.api  Dockerfile.worker  pyproject.toml  start-api.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_extensions.py  0002_core_schema.py  0003_conn_last_rotated.py  0004_conversation_messages.py  0005_onchain_ledger.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  health.py  webhooks.py
backend/app/api/admin/: auth.py  domain.py  router.py
backend/app/api/twa/: router.py
backend/app/bot/: factory.py  notifier.py
backend/app/bot/handlers/: conversation.py  start.py
backend/app/core/: config.py  db.py  errors.py  logging.py  ratelimit.py  redis.py  security.py
backend/app/models/: __init__.py  access.py  base.py  catalog.py  commerce.py  content.py  onchain.py  referral.py  system.py  users.py
backend/app/seed/: data.py  tos_v1.md
backend/app/services/: accesses.py  audit.py  auth_admin.py  catalog.py  content.py  maintenance.py  notifications.py  orders.py  ratelimit_helpers.py  referral.py  settings.py  users.py
backend/app/services/payments/: base.py  mock.py  processing.py  registry.py
backend/app/workers/: main.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_flow.py  test_allocation_invariant.py  test_content.py  test_maintenance.py  test_onchain_amounts.py  test_onchain_config.py  test_onchain_evm.py  test_onchain_oracle.py  test_onchain_provider.py  test_onchain_solana.py  test_onchain_tron.py  test_onchain_utxo.py  test_onchain_watcher.py  test_payment_processing.py  test_referral.py  test_security.py  test_security_hardening.py  test_seed.py  test_twa_flow.py
(+179 files in other folders)
