[project]
name = "bm-usa-proxy"
version = "0.1.0"
description = "BM USA Proxy — Telegram ecosystem for reselling US mobile proxies (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiogram>=3.10",
    "arq>=0.26",
    "redis>=5.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "sentry-sdk[fastapi]>=2.5",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]  # assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]        # hardcoded test secrets are fine
"alembic/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
warn_unused_ignores = true
disallow_untyped_defs = true
# strict domain layer per plan (services/ added Stage 2)
[[tool.mypy.overrides]]
module = ["app.services.*", "app.core.*"]
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
